# starling-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  example.beancount  notes.md  starling.bean
.github/workflows/: rust-ci.yml  rust-ci.yml.bak
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_feeditem_table.rs  m20220101_000001_create_transaction_table.rs  m20220101_000002_create_counterparty_table.rs  m20220101_000003_create_account_table.rs
src/: README.md  bean.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
src/bean/: mod.rs  open.rs  transaction.rs  transactions.rs
src/bean/directives/: mod.rs  open.rs  transactions.rs
src/cli/: mod.rs
src/cli/commands/: initialise.rs
src/commands/: account.rs  accounts.rs  admin.rs  database.rs  mod.rs  transactions.rs
src/db/: account.rs  counterparty.rs  mod.rs  service.rs  transaction.rs
src/entities/: account.rs  counterparty.rs  feed_item.rs  mod.rs  prelude.rs  transaction.rs
src/schemas/: accounts.rs  transactions.rs
src/starling/: account.rs  client.rs  mod.rs  transaction.rs
src/starling/api/: account_for_currency.rs  balance.rs  mod.rs  settled_transactions_from.rs  transactions_from.rs
src/starling/schemas/: account.rs  accounts.rs  balance.rs  mod.rs  transaction.rs  transactions.rs
