[package]
name = "starling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
serde_path_to_error = "0.1.8"
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"
serde_qs = "0.10.1"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
regex = "1.7.0"
strum = { version = "0.24.1", features = ["derive"] }
convert_case = "0.6.0"
itertools = "0.10.5"

