[package]
name = "budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.27", features = ["derive"] }
config = "0.13.2"
itertools = "0.10.5"
reqwest = { version = "0.11.13", features = ["json"] }
rust_decimal = "1.27.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_path_to_error = "0.1.8"
thiserror = "1.0.37"
tokio = { version = "1.12", features = ["full"] } 
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
strum = { version = "0.24.1", features = ["derive"] }
regex = "1.7.0"
convert_case = "0.6.0"
