[package]
name = "money"
version = "0.1.0"
authors = ["Richard <richlyon@mac.com>"]
edition = "2021"
default-run = "cli"

[workspace]

members = [
    ".",
    "migration",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
bincode = "1.3.3"
chrono = {version = "0.4.19", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
serde = {version="1.0.132", features=["derive"]}
serde_yaml = "0.9.21"
surf = "2.3.2"
thiserror = "1.0.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
async-trait = "0.1.68"
sea-orm = { version="0.11.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls"] }
strum_macros = "0.24"
strum = { version = "0.24.1", features = ["derive"]}
anyhow = "1.0.71"
sea-orm-migration = "0.11.3"
migration = {path = "migration"}
# futures = "0.3.28"